--- a/seller-panel and website/web-assets/assets/scss/layouts/header.scss
+++ b/seller-panel and website/web-assets/assets/scss/layouts/header.scss
@@ -2,7 +2,7 @@
     height: 80px;
     padding: 0px 30px;
     background-color: white;
-    color: #ff7f00;
+    color: black;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -22,31 +22,67 @@
             display: flex;
             align-items: center;
             
-
-            ul {
-                margin: 0;
-                gap: 10px;
-                padding: 0;
-
-                li {
-                    font-size: 13px;
-                    list-style: none;
-                    height: 58px;
-                    cursor: pointer;
-                    display: flex;
-                    align-items: center;
-                    a {
-                        text-decoration: none;
-                        transition: all 0.2s ease-in-out;
-
-                        &:hover {
-                            text-decoration: underline;
-                            color: rgb(163, 171, 196);
-                        }
-                    }
-                    &:hover {
-                        color: rgb(163, 171, 196);
-                    }
+            .first-ul {
+              margin: 0;
+              gap: 10px;
+              padding: 0;
+              li {
+                  list-style: none;
+                  height: 58px;
+                  cursor: pointer;
+                  display: flex;
+                  align-items: center;
+            a {
+              position: relative;
+              display: block;
+              text-transform: uppercase;
+              margin: 20px 0;
+              padding: 10px;
+              text-decoration: none;
+              color: #262626;
+              font-family: 'Inter';
+              font-size: 13px;
+              font-weight: 700;
+              transition: .5s;
+              z-index: 1;
+              &:before {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                border-top: 2px solid #ff7f00;
+                border-bottom: 2px solid #ff7f00;
+                transform: scaleY(2);
+                opacity: 0;
+                transition: .3s;
+              }
+              &:after {
+                content: '';
+                position: absolute;
+                top: 2px;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: #ff7f00;
+                transform: scale(0);
+                opacity: 0;
+                transition: .3s;
+                z-index: -1;
+              }
+              &:hover {
+                color: #fff;
+                &:before {
+                  transform: scaleY(1);
+                  opacity: 1;
+                }
+                &:after {
+                  transform: scaleY(1);
+                  opacity: 1;
+                }
+              }
+            }
             &.dropdown {
                 i{
                     transition: all 0.2s ease-in-out;
@@ -71,7 +107,7 @@
                         color: #333;
                         font-size: 11px;
                         height: 35px;
-
+  
                         a {
                             padding: 0;
                             background: none;
@@ -82,13 +118,13 @@
                             background: #10182f;
                         }
                     }
-
+  
                     // Submenu (right-hand side)
                     .sub-dropdown {
                         position: relative;
                         height: 39px;
                         font-size: 11px;
-
+  
                         &:hover .sub-menu {
                             display: block;
                         }
@@ -97,7 +133,7 @@
                             justify-content: space-between;
                             width: 100%;
                         }
-
+  
                         .sub-menu {
                             display: none;
                             position: absolute;
@@ -112,7 +148,7 @@
                         }
                     }
                 }
-
+  
                 // Show dropdown on hover
                 &:hover .dropdown-menu {
                     display: block;
@@ -121,8 +157,8 @@
                     rotate: 180deg;
                 }
             }
-                }
-            }
+          }
+        }
         }
     }
 
@@ -176,7 +212,7 @@
                     border-radius: 50%;
                     width: 40px;
                     height: 40px;
-                    background-color:#ff7f00;
+                    background-color:black;
                     transition: .3s;
                 }
 
