--- a/seller-panel and website/web-assets/assets/scss/style.scss
+++ b/seller-panel and website/web-assets/assets/scss/style.scss
@@ -6,7 +6,7 @@
   color: white;
 }
 .noti-counter{
-  background-color: #878dc3;
+  background-color: #ff7f00;
   color: white;
   width: 20px;
   height: 20px;
