--- a/seller-panel and website/web-assets/assets/scss/layouts/header.scss
+++ b/seller-panel and website/web-assets/assets/scss/layouts/header.scss
@@ -265,7 +265,7 @@
                     border-radius: 50%;
                     width: 40px;
                     height: 40px;
-                    background-color:black;
+                    background-color:#ff7f00;
                     transition: .3s;
                 }
 
