--- a/seller-panel and website/web-assets/assets/css/style.css
+++ b/seller-panel and website/web-assets/assets/css/style.css
@@ -302,7 +302,7 @@
   border-radius: 50%;
   width: 40px;
   height: 40px;
-  background-color: black;
+  background-color: #ff7f00;
   -webkit-transition: 0.3s;
   transition: 0.3s;
 }
@@ -621,9 +621,8 @@
 }
 
 footer {
-  background-color: #000000;
+  background-color: rgb(245, 245, 245);
   padding: 50px 20px 5px 20px;
-  color: #ffffff;
 }
 footer .foot-logo {
   margin-left: 2%;
@@ -711,7 +710,7 @@ footer .info .social-desc .payment-methods .payment-method-img {
 }
 footer hr {
   margin: 20px 0px;
-  background: rgb(163, 171, 196);
+  background: rgb(0, 0, 0);
 }
 footer .terms-section {
   -webkit-box-pack: justify;
@@ -737,7 +736,7 @@ footer .terms-section .terms ul li a {
 }
 
 .text-c-white {
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 .fw-800 {
