--- a/seller-panel and website/web-assets/assets/scss/layouts/header.scss
+++ b/seller-panel and website/web-assets/assets/scss/layouts/header.scss
@@ -114,8 +114,8 @@
                             text-decoration: none;
                         }
                         &:hover {
-                            color: rgb(163, 171, 196);
-                            background: #10182f;
+                          color: white;
+                            background: #ff7f00;
                         }
                     }
   
